Update Character usage