@@ -237,7 +237,7 @@ public class TrueTypeFont {
                 if (i < 256) { // standard characters
                     charArray[i] = newIntObject;
                 } else { // custom characters
-                    customChars.put(new Character(ch), newIntObject);
+                    customChars.put(Character.valueOf(ch), newIntObject);
                 }
 
                 fontImage = null;
@@ -294,7 +294,7 @@ public class TrueTypeFont {
             if (currentChar < 256) {
                 floatObject = charArray[currentChar];
             } else {
-                floatObject = customChars.get(new Character((char) currentChar));
+                floatObject = customChars.get(Character.valueOf((char) currentChar));
             }
 
             if (floatObject != null) {
@@ -457,7 +457,7 @@ public class TrueTypeFont {
             if (charCurrent < 256) {
                 floatObject = charArray[charCurrent];
             } else {
-                floatObject = customChars.get(new Character((char) charCurrent));
+                floatObject = customChars.get(Character.valueOf((char) charCurrent));
             }
 
             if (floatObject != null) {
@@ -472,7 +472,7 @@ public class TrueTypeFont {
                             if (charCurrent < 256) {
                                 floatObject = charArray[charCurrent];
                             } else {
-                                floatObject = customChars.get(new Character((char) charCurrent));
+                                floatObject = customChars.get(Character.valueOf((char) charCurrent));
                             }
                             totalwidth += floatObject.width - correctL;
                         }
